# mienjine

./: .gitignore  .pdca-status.json  Cargo.toml  Gascii.config  README.md  ccargo  phase-verification-report.md  phase.md
.bkit/state/: memory.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets.example/: README.md
docs/: ADR.md  gpu-parity-phase1-baseline.md
docs/qa/: refactor_integration_checklist.md
log/: pmx_Log.txt
preview-web/: app.js
scripts/: convert_mmd_to_glb.md
src/: animation.rs  app.rs  cli.rs  lib.rs  loader.rs  main.rs  math.rs  pipeline.rs  renderer.rs  scene.rs  terminal.rs
src/application/: asset_service.rs  error.rs  mod.rs  render_service.rs  runtime_service.rs  scene_service.rs
src/assets/: mod.rs
src/assets/loader/: core.rs  (+8 more)
src/domain/: mod.rs
src/engine/: animation.rs  animation_tests.rs  pipeline.rs  pmx_rig.rs  scene.rs
src/infrastructure/: error.rs  legacy_asset_adapter.rs  legacy_engine_adapter.rs  legacy_render_adapter.rs  mod.rs
src/interfaces/: mod.rs
src/render/: backend.rs  backend_cpu.rs  backend_gpu.rs  backend_tests.rs  background.rs  mod.rs  renderer.rs  renderer_color.rs  renderer_exposure.rs  renderer_glyph.rs  renderer_material.rs  renderer_metrics.rs  renderer_texture.rs
src/runtime/: app.rs  app_impl.rs  app_inspect.rs  app_render_config.rs  app_start.rs  cli.rs  config.rs  config_parse.rs  interaction_camera.rs  mod.rs  options.rs  options_visual.rs  preprocess.rs  render_loop.rs  start_ui.rs  start_ui_helpers.rs  state.rs  terminal.rs  terminal_caps.rs  terminal_diff.rs
(+204 files in other folders)
