[package]
name = "terminal-miku3d"
version = "0.1.0"
edition = "2024"

[features]
default = []
gpu = ["dep:wgpu"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bytemuck = { version = "1.21", features = ["derive"] }
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3"
glam = "0.30.0"
wgpu = { version = "22", optional = true }
gltf = { version = "1.4.1", features = ["import", "utils", "names", "KHR_texture_transform"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
ratatui = "0.28.1"
rodio = "0.20.1"
serde_json = "1.0.140"
tobj = "4.0.3"
PMXUtil = "0.8"

[dev-dependencies]
tempfile = "3.18.0"
